# cosmic-clash

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  IPC_IMPLEMENTATION.md  README.md  UI_PREVIEW.md  WSL_COMPILATION_GUIDE.md  justfile  test_syntax  test_syntax.rs
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  quality.yml
assets/: Country.mmdb
i18n/en/: cosmic_clash.ftl
i18n/zh-CN/: cosmic_clash.ftl
resources/: app.desktop  app.metainfo.xml
src/: api.rs  app.rs  config.rs  controller.rs  i18n.rs  lib.rs  log.rs  main.rs  pages.rs  sidecar.rs
src/pages/: home.rs  profile.rs  settings.rs
uniffi/clash-ffi/: Cargo.toml  README.md  uniffi.toml
uniffi/clash-ffi/src/: controller.rs  lib.rs  log.rs  util.rs
