[package]
name = "cosmic-clash"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "GUI of clash-rs"
repository = "https://github.com/pop-os/cosmic-app-template"


[features]
default = ["cosmic"]

# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
cosmic = [
    "libcosmic/a11y", 
    "libcosmic/about", 
    "libcosmic/dbus-config", 
    "libcosmic/multi-window", 
    "libcosmic/single-instance", 
    "libcosmic/tokio", 
    "libcosmic/winit",
    "libcosmic/wgpu"
]

[dependencies]
futures-util = "0.3"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
open = "5"
rust-embed = "8"
tokio = { version = "1", features = ["full"] }

# Logging
time = { version = "0.3", features = ["macros", "local-offset"] }
humantime = { version = "2", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["tracing-log", "std", "local-time","fmt", "ansi"] }
tracing = "0.1"
eyre = "0.6"

[target.'cfg(target_os = "linux")'.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = ["wayland"]

[target.'cfg(not(target_os = "linux"))'.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = []

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
