[package]
name = "cosmic-clash"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "GUI of clash-rs"
repository = "https://github.com/pop-os/cosmic-app-template"


[features]
default = ["cosmic"]

# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
cosmic = [
    "libcosmic/a11y", 
    "libcosmic/about", 
    "libcosmic/dbus-config", 
    "libcosmic/multi-window", 
    "libcosmic/single-instance", 
    "libcosmic/tokio", 
    "libcosmic/winit",
    "libcosmic/wgpu"
]

[dependencies]
futures-util = "0.3"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
open = "5"
rust-embed = "8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
dirs = "5"

# Logging
time = { version = "0.3", features = ["macros", "local-offset"] }
humantime = { version = "2", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["tracing-log", "std", "local-time","fmt", "ansi"] }
tracing = "0.1"
eyre = "0.6"

[target.'cfg(target_os = "linux")'.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# features = ["wayland"]  # Removed for WSL compatibility

[target.'cfg(target_os = "windows")'.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = ["winit", "wgpu"]

[target.'cfg(target_os = "macos")'.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = ["winit", "wgpu"]

# Fallback for other platforms
[target.'cfg(not(any(target_os = "linux", target_os = "windows", target_os = "macos")))'.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = []

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
